--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -97,7 +97,7 @@
       }
     },
     "sidebar": {
-      "recent_articles": "Recent articles",
+      "recent_articles": "Recipes",
       "categories": "Categories"
     }
   },
